--- a/app/views/equation/solve_quad.html.haml
+++ b/app/views/equation/solve_quad.html.haml
@@ -2,9 +2,12 @@
 = "#{params['a']} x" 
 %sup 2
 = "+ #{params['b']} x + #{params['c']} = 0 "
-
-%h1 Answer: 
-- @answer.each do |root|
-  %p= "x = #{root}"
+%h1.error
+  = @error
+- if @answer
+  %h1 Answer: 
+  - @answer.each do |root|
+    %p= "x = #{root}"
+    
 %br 
   = link_to "New equation", equation_home_path, class: 'btn btn-default'
